# acpdb

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  acpdb.org  runlasso-nonscf.m
cmake/Modules/: FindBTPARSE.cmake  FindCEREAL.cmake  FindZLIB.cmake
example_inputs/01_create_database/: makedb.inp
example_inputs/05_force_calc/: 01_makedb.inp  02_writegjf.inp  03_run.sh  04_extract.sh  05_insert_forces.inp
example_inputs/10_calculate_terms/: 01_write_gjf.inp  02_makedat.sh  03_insert.inp
octave/: LassoActiveSet.m  README  computeSlope.m  process_options.m  runlasso-nonscf.m  runlasso.m
python/: generate_maxcoef_maxdeltae.py
python/ACP/: ACP.py  __init__.py
src/: CMakeLists.txt  acp.cpp  acp.h  acpdb.cpp  config.h.in  globals.cpp  globals.h  outputeval.cpp  outputeval.h  parseutils.cpp  parseutils.h  sqldb.cpp  sqldb.h  statement.cpp  statement.h  strtemplate.cpp  strtemplate.h  structure.cpp  structure.h  trainset.cpp  trainset.h
templates/: crystal.34  crystal.d12  crystalecp.34  crystalecp.d12  espresso.in  file.xyz  gaussian.gjf  gaussian_d1e-terms-nonsinglet.gjf  gaussian_d1e-terms-singlet.gjf  gaussian_d1e_forces.gjf  gaussian_d2e-terms-singlet.gjf  gaussian_d2e.gjf  gaussian_force-terms-singlet.gjf  gaussian_maxcoef.gjf  gaussian_pseudo.gjf  gaussian_terms-nonsinglet.gjf  gaussian_terms-singlet.gjf  gaussian_terms.gjf  orca.inp  psi4.inp  vasp.POSCAR
tests/: CMakeLists.txt
tests/001_simple/: 001_io.inp  001_io_globals.inp  CMakeLists.txt
tests/001_simple/ref/: 001_io_globals.out
tests/002_globaldb/: 001_connect.db  001_connect.inp  002_verify.inp  003_print.inp  CMakeLists.txt
tests/002_globaldb/ref/: 001_connect.out  002_verify.out  003_print.out
tests/003_insert/: 001_insert_litref.inp  002_insert_litref_bibtex.inp  003_insert_set.inp  004_insert_set_xyz.inp  005_insert_set_xyz_regexp.inp  006_insert_din.inp  007_insert_method.inp  008_insert_structure_xyz.inp  009_insert_structure_poscar.inp  010_insert_structure_file.inp  011_insert_property.inp  012_insert_evaluation.inp  013_insert_term.inp  014_insert_term_maxcoef.inp  015_insert_calc.inp  016_insert_total_energy.inp  017_insert_dipole.inp  018_insert_property_fullset.inp  019_insert_set_poscar.inp  020_insert_set_poscar_regexp.inp  021_insert_term_calcslope.inp  022_insert_maxcoef.inp  CMakeLists.txt
tests/003_insert/ref/: 001_insert_libref.out  001_insert_litref.out  002_insert_litref_bibtex.out  003_insert_set.out  004_insert_set_xyz.out  005_insert_set_xyz_regexp.out  006_insert_din.out  007_insert_method.out  008_insert_structure_xyz.out  009_insert_structure_poscar.out  010_insert_structure_file.out  011_insert_property.out  012_insert_evaluation.out  013_insert_term.out  014_insert_term_maxcoef.out  015_insert_calc.out  016_insert_total_energy.out  017_insert_dipole.out  018_insert_property_fullset.out  019_insert_set_poscar.out  020_insert_set_poscar_regexp.out  021_insert_term_calcslope.out  022_insert_maxcoef.out
tests/004_print/: 001_print.inp  002_print_litref.inp  003_print_set.inp  004_print_method.inp  005_print_structure.inp  006_print_property.inp  007_print_evaluation.inp  008_print_term.inp  009_print_din.inp  CMakeLists.txt
tests/004_print/ref/: 001_print.out  002_print_litref.out  003_print_set.out  004_print_method.out  005_print_structure.out  006_print_property.out  007_print_evaluation.out  008_print_term.out  009_print_din.out  009_print_din_s22.din  009_print_din_s22b.din  009_print_din_s22c.din
tests/005_delete/: 001_delete_litref.inp  001_litref.inp  002_delete_set.inp  002_set.inp  003_delete_method.inp  003_method.inp  004_delete_structure.inp  004_structure.inp  005_delete_property.inp  005_property.inp  006_delete_evaluation.inp  006_evaluation.inp  007_delete_term.inp  007_term.inp  008_delete_all.inp  CMakeLists.txt
tests/005_delete/ref/: 001_delete_litref.out  001_litref.out  001_print.out  002_delete_set.out  002_print_litref.out  002_set.out  003_delete_method.out  003_method.out  004_delete_structure.out  004_structure.out  005_delete_property.out  005_property.out  006_delete_evaluation.out  006_evaluation.out  007_delete_term.out  007_term.out  008_delete_all.out
tests/006_compare/: 001_compare.inp  002_compare_set.inp  003_compare_internal.inp  CMakeLists.txt
tests/006_compare/ref/: 001_compare.out  002_compare_set.out  003_compare_internal.out
tests/007_write/: 001_write_db.inp  002_write_opts.inp  003_write_moltemplate.inp  004_write_crystemplate.inp  CMakeLists.txt
tests/007_write/ref/: 001_write_db.out  002_write_opts.out  003_write_moltemplate.out  004_write_crystemplate.out  s22partial.h2o_h2o.xyz  s22partial.h2o_h2o_1.xyz  s22partial.h2o_h2o_2.xyz  s22partial.nh3_nh3.xyz  s22partial.nh3_nh3_1.xyz  s22partial.nh3_nh3_2.xyz
tests/008_acp/: 001_acp_load.inp  002_acp_write.inp  003_acp_split.inp  004_write_with_acp.inp  004_write_with_acpgau.inp  005_write_with_acpcrys.inp  CMakeLists.txt
tests/008_acp/ref/: 001_acp_load.out  002_acp_write.acp  002_acp_write.out  003_acp_split.out  004_write_with_acp.out  004_write_with_acpgau.out  005_write_with_acpcrys-set.oxalic_acid_alpha.d12  005_write_with_acpcrys-set.oxalic_acid_beta.d12  005_write_with_acpcrys.out
tests/009_training/: 001_define_ts.inp  002_describe.inp  003_saveload.inp  004_writedin.inp  005_writetrain.inp  006_comparetrain.inp  007_eval.inp  008_write_one_term.inp  009_write_many_terms.inp  010_insert_one_term.inp  011_insert_many_terms.inp  012_insert_old.inp  013_dump.inp  014_insert_many_terms_slope.inp  015_write_terms_loop.inp  016_write_old.inp  CMakeLists.txt
tests/009_training/ref/: 001_define_ts.out  002_describe.out  003_saveload.out  004_writedin.out  005_writetrain.out  006_comparetrain.out  007_eval.out  008_write_one_term.out  009_write_many_terms.out  010_insert_one_term.out  011_insert_many_terms.out  012_insert_old.out  013_dump.out  014_insert_many_terms_slope.out  015_write_terms_loop.out  016_write_old.out
tests/010_calc_ediff/: 001_calc_ediff.inp  CMakeLists.txt
tests/010_calc_ediff/ref/: 001_calc_ediff.out
utils/: sumacp.awk
(+39 files in other folders)
